src/objects/CE_User_Notification__c.object
<CustomObject>
    <fields>
        <fullName>CE_Notification__c</fullName>
        <label>Notification</label>
        <referenceTo>CE_Notification__c</referenceTo>
        <relationshipLabel>User Notifications</relationshipLabel>
        <relationshipName>NotificationRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserNotifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unread</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isArchived</label>
        <type>Checkbox</type>
    </fields>
    <label>User Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UN-{00000000}</displayFormat>
        <label>User Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>